* Changelog
** Unreleased 9.0.1
  * Fix Accommodate renaming of lsp-postgres binaries
  * Fix =lsp-org= for org >= 9.7 (see #4300)
  * Add format on save support
  * Fix beancount journal file init option
  * Add support for [[https://github.com/glehmann/earthlyls][earthlyls]]
  * Add support for GNAT Project (~gpr-mode~, ~gpr-ts-mode~).
  * Add SQL support
  * Add support for Meson build system. (~meson-mode~).
  * Add support for go to definition for external files (.dll) in CSharp projects for OmniSharp server.
  * Added a new optional ~:action-filter~ argument when defining LSP clients that allows code action requests to be modified before they are sent to the server. This is used by the Haskell language server client to work around an ~lsp-mode~ parsing quirk that incorrectly sends ~null~ values instead of ~false~ in code action requests.
  * Add support for C# via the [[https://github.com/dotnet/roslyn/tree/main/src/LanguageServer][Roslyn language server]].
  * Add basic support for [[https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/#textDocument_pullDiagnostics][pull diagnostics]] requests.
  * Add ~lsp-flush-delayed-changes-before-next-message~ customization point to enforce throttling document change notifications.
  * Add ~lsp-sql-show-tables~ command.
  * Fix bug in ~rust-analyzer.check.features~ configuration via ~lsp-rust-checkonsave-features~ Emacs setting: we were defaulting to ~[]~, but ~rust-analyzer~ defaults to inheriting the value from ~rust-analyzer.cargo.features~. The bug resulted in code hidden behind features not getting type checked when those features were enabled by setting ~rust-analyzer.cargo.features~ via the ~lsp-rust-features~ Emacs setting.
  * Change ~ruff-lsp~ to ~ruff~ for python lsp client. All ~ruff-lsp~ customizable variable change to ~ruff~. Lsp server command now is ~["ruff" "server"]~ instead of ~["ruff-lsp"]~.
  * Add futhark support