@@ -54,8 +54,15 @@ here, https://github.com/emacs-lsp/lsp-mode/issues/3368#issuecomment-1049635155.
   :group 'lsp-json
   :package-version '(lsp-mode . "6.3"))
 
+(defcustom lsp-json-validate t
+  "Enable json validaten."
+  :type 'boolean
+  :group 'lsp-json
+  :package-version '(lsp-mode . "9.0.1"))
+
 (lsp-register-custom-settings
  '(("json.schemas" lsp-json-schemas)
+   ("json.validate.enable" lsp-json-validate)
    ("http.proxy" lsp-http-proxy)
    ("http.proxyStrictSSL" lsp-http-proxyStrictSSL)))
 
